# fusionNF

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
archive/2026-06-29_nf-fusion-study/: CODE_SHA.txt  EXTENDED_ABSTRACT.md  README.md
archive/2026-06-29_nf-fusion-study/code/: Makefile  README.md
configs/: easy.yaml  ecg_ppg_easy.yaml  ecg_ppg_hard.yaml  tiny.yaml
notebooks/: ecg_ppg_rr.ipynb  explainer.ipynb
reports/: ABSTRACT.md  METHODS.md  ecg_ppg_gate.md  phase0_gate.md  phase1_gate.md  phase2_validation.json  phase3_baselines.md  phase4_gate.md  phase4_results.json  phase6_gate.md  real_ecg_ppg_diagnostics.json  real_ecg_ppg_diagnostics.md  real_ecg_ppg_gate.md  real_rr_fix.md  results_ablation_field_vs_spectral.md  results_chirp_param_matched.json  results_chirp_param_matched.md  results_simulated_consolidated.md  smfret_plan.md
scripts/: download_bidmc.sh  download_kinsoft.sh  run_ablation_gpu.sh  run_cardiac_gpu.sh  run_rr_degrade_gpu.sh  run_rr_gpu.sh  run_smfret_gpu.sh
src/: config.py
src/baselines/: oracle.py  wavelet_coherence.py
src/data/: dataset.py  ecg_ppg.py  examples.py  generator.py  transforms.py
src/ebc/: event_inr.py  evinr.py
src/models/: ablation.py  early_fusion.py  recon_test.py  registry.py  train.py
src/probe/: frequency_probe.py
src/real/: bidmc.py  bidmc_rr.py  diagnose.py  train_real.py
src/smfret/: data.py  models.py  run.py  viz.py
src/sweep/: pareto.py  runner.py
src/utils/: device.py  rundir.py  seeding.py
tests/: test_ablation_arms.py  test_determinism.py
(+32 files in other folders)
