[project]
name = "nf-fusion"
version = "0.1.0"
description = "Controlled harness for testing the neural-field fusion hypothesis on multiscale spatiotemporal signals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
